--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": ".",
-      "program": "build/Debug/outDebug",
+      "cwd": "c:/Users/HP/Desktop/Accessos Directos/CanalYouTube/Talleres Algoritmos 2023 - 02/Talleres-AED-2023-02",
+      "program": "c:/Users/HP/Desktop/Accessos Directos/CanalYouTube/Talleres Algoritmos 2023 - 02/Talleres-AED-2023-02/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
